<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s Turn.</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Info</string>
    <string name="human">Human:  </string>
    <string name="ties">Ties:  </string>
    <string name="android">Android:  </string>
    <string name="newGame_button">New Game</string>
    <string name="contact_heading">Contact Info</string>
    <string name="contact_info">
        <b>Name: </b> Dan
        <b>Email: </b> my email here
    </string>
    <string name="about_heading">About</string>
    <string name="about_info">This app allows you to play a game a game of tic tac toe
                    against a computer.  The rounds will rotate who gets to play first.
                    Also, the app will keep track and display the result of the game
                    at the bottom of the screen.
    </string>
    <string name="newGame_label">New Game</string>
    <string name="exitGame_label">Exit Game</string>


</resources>
