<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/play_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/one"
                android:layout_column="0"
                android:textSize="70dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/two"
                android:layout_column="0"
                android:textSize="70dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/three"
                android:layout_column="0"
                android:textSize="70dp"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/four"
                android:layout_column="0"
                android:textSize="70dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/five"
                android:layout_column="0"
                android:textSize="70dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/six"
                android:layout_column="0"
                android:textSize="70dp"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/seven"
                android:layout_column="0"
                android:textSize="70dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/eight"
                android:layout_column="0"
                android:textSize="70dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/nine"
                android:layout_column="0"
                android:textSize="70dp"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/info"
        android:id="@+id/information"
        android:textSize="25dp"
        android:gravity="center_horizontal"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/human"
                android:id="@+id/human"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text=""
                android:id="@+id/humanCount"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ties"
                android:id="@+id/ties"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text=""
                android:id="@+id/tiesCount"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:id="@+id/android"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/androidCount"
                android:gravity="center_horizontal"/>

            </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/newGame_button"
        android:textColor="@color/Light_Grey"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
